# Synthio

./: .gitignore  README.md  csv_to_sql.py  pyproject.toml  requirements.txt  run_chatbot.py  run_ui.py  synthio.db
chatbot/: README.md  __init__.py  config.example.env  main.py
chatbot/agents/: __init__.py  base.py  guardrail.py  planner.py  sql_generator.py  validator.py  writer.py
chatbot/core/: __init__.py  config.py  database.py  models.py  schema.py  tracing.py
chatbot/graph/: __init__.py  nodes.py  workflow.py
chatbot/prompts/: guardrail.j2  planner.jinja  sql_generator.jinja  validator.jinja  writer.j2
chatbot/ui/: __init__.py  app.py
tests/: __init__.py  test_database.py  test_schema.py
